--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -1,7 +1,7 @@
 {% load static %}
 <html>
     <head>
-        <title>Django Girls blog</title>
+        <title>Nadya Ts blog</title>
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
         <link rel="stylesheet" href="{% static 'css/blog.css' %}">
@@ -9,11 +9,11 @@
     </head>
     <body>
         <div class="page-header">
-            <h1>
-                {% if user.is_authenticated %}
+            <h1 class="page-header-title">
+                {% if user.is_authenticated and not request.get_full_path == '/post/new/' %}
                     <a href="{% url 'post_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
                 {% endif %}
-                <a href="/">Django Girls Blog</a>
+                <a href="/">Nadya Ts Blog</a>
             </h1>
         </div>
         <div class="content container">
